feature - user detail and password update endpoints implemented
