# routes/v1/user.routes.js
@@ -1,9 +1,16 @@
 const express = require('express');
+const authenticate = require('../../middleware/auth/authenticate');
 const userController = require('../../controllers/v1/user.controller');
 
 const userRouter = express.Router();
 
 userRouter.post('/', userController.signup);
 userRouter.post('/login', userController.login);
+
+userRouter.use(authenticate);
+
+userRouter.put('/', userController.update);
+userRouter.put('/password', userController.updatePassword);
+userRouter.delete('/', userController.deactivate);
 
 module.exports = userRouter;
